--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.10",
     "morgan": "^1.10.0",
-    "nodemailer": "^6.6.5"
+    "nodemailer": "^6.6.5",
+    "otp-generator": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.13"
