--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "mongoose": "^6.0.10",
     "morgan": "^1.10.0",
     "nodemailer": "^6.6.5",
-    "otp-generator": "^4.0.0"
+    "otp-generator": "^4.0.0",
+    "stripe": "^8.191.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.13"
